# runme

./: .gitignore  README.md  install_linux.sh  main.py  pyproject.toml  runme-desktop.spec
src/runme/: app.py  models.py  storage.py
